added ascii art

--- a/EncryptoMania/files/Makefile
+++ b/EncryptoMania/files/Makefile
@@ -1,4 +1,5 @@
 main : EncryptoMania.cpp CeaserCipher.cpp
+	g++ -o asciiArt.o -c asciiArt.cpp
 	g++ -o EncryptoMania.o -c EncryptoMania.cpp
 	g++ -o CeaserCipher.o -c CeaserCipher.cpp
-	g++ -o RUNAPP EncryptoMania.o CeaserCipher.o
+	g++ -o EncryptoMania EncryptoMania.o CeaserCipher.o asciiArt.o
